log files and classwork files

--- a/SYS320-SP22/Week01/homework/console.ipynb
+++ b/SYS320-SP22/Week01/homework/console.ipynb
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "outputs": [
     {
      "data": {
       "text/plain": "<module 'syslogSSHAuthenticate' from 'C:\\\\Users\\\\ecraw\\\\PycharmProjects\\\\SYS320-Automation-And-Scipting\\\\SYS320-SP22\\\\Week01\\\\homework\\\\syslogSSHAuthenticate.py'>"
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -89,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "news\n",
       "cyrus\n",
+      "news\n",
       "test\n",
       "root\n"
      ]
@@ -128,7 +128,7 @@
     "###\n",
     "5. What additional questions do you have?\n",
     "\n",
-    "    I don't have nay questions on material right now, everything made sense to me."
+    "    I don't have any questions on material right now, everything made sense to me."
    ],
    "metadata": {
     "collapsed": false,
