--- a/SYS320-SP22/Week02/class/console.ipynb
+++ b/SYS320-SP22/Week02/class/console.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "<module 'apacheLog' from 'C:\\\\Users\\\\ecraw\\\\PycharmProjects\\\\SYS320-Automation-And-Scipting\\\\SYS320-SP22\\\\Week02\\\\class\\\\apacheLog.py'>"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,19 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../../logs/access.log'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_27576\\1363355712.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mapacheLog\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mapache_events\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'../../logs/access.log'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'apache'\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;34m'php'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;32m~\\PycharmProjects\\SYS320-Automation-And-Scipting\\SYS320-SP22\\Week02\\class\\apacheLog.py\u001B[0m in \u001B[0;36mapache_events\u001B[1;34m(filename, service, term)\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      8\u001B[0m     \u001B[1;31m# Call logCheck and return the results\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 9\u001B[1;33m     \u001B[0mis_found\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlogCheck\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_logs\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfilename\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mservice\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mterm\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     10\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     11\u001B[0m     \u001B[1;31m# Found list\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\PycharmProjects\\SYS320-Automation-And-Scipting\\SYS320-SP22\\Week02\\class\\logCheck.py\u001B[0m in \u001B[0;36m_logs\u001B[1;34m(filename, service, term)\u001B[0m\n\u001B[0;32m     17\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     18\u001B[0m     \u001B[1;31m# Open a file\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 19\u001B[1;33m     \u001B[1;32mwith\u001B[0m \u001B[0mopen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfilename\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     20\u001B[0m         \u001B[1;31m# read in the file and save it to a variable\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     21\u001B[0m         \u001B[0mcontents\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mreadlines\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '../../logs/access.log'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "404 GET /wordpress/wp-login.php\n",
+      "404 GET /mediawiki/index.php?title=Main_Page\n"
      ]
     }
    ],
@@ -67,19 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../../logs/access.log'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_27576\\304499711.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mapacheLog\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mapache_events\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'../../logs/access.log'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'apache'\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;34m'cgi'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;32m~\\PycharmProjects\\SYS320-Automation-And-Scipting\\SYS320-SP22\\Week02\\class\\apacheLog.py\u001B[0m in \u001B[0;36mapache_events\u001B[1;34m(filename, service, term)\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      8\u001B[0m     \u001B[1;31m# Call logCheck and return the results\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 9\u001B[1;33m     \u001B[0mis_found\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlogCheck\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_logs\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfilename\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mservice\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mterm\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     10\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     11\u001B[0m     \u001B[1;31m# Found list\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\PycharmProjects\\SYS320-Automation-And-Scipting\\SYS320-SP22\\Week02\\class\\logCheck.py\u001B[0m in \u001B[0;36m_logs\u001B[1;34m(filename, service, term)\u001B[0m\n\u001B[0;32m     17\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     18\u001B[0m     \u001B[1;31m# Open a file\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 19\u001B[1;33m     \u001B[1;32mwith\u001B[0m \u001B[0mopen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfilename\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     20\u001B[0m         \u001B[1;31m# read in the file and save it to a variable\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     21\u001B[0m         \u001B[0mcontents\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mreadlines\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '../../logs/access.log'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "404 GET /cgi-bin/test-cgi\n",
+      "404 GET /cgi-bin/htsearch?Exclude=%60/etc/passwd%60\n",
+      "404 POST /cgi-bin/test-cgi\n"
      ]
     }
    ],
@@ -95,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [],
    "metadata": {
