working on homework 1

--- a/SYS320-SP22/Week02/homework/apache-proxy-log-events.ipynb
+++ b/SYS320-SP22/Week02/homework/apache-proxy-log-events.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "outputs": [
     {
      "data": {
       "text/plain": "<module 'ProxyLog' from 'C:\\\\Users\\\\ecraw\\\\PycharmProjects\\\\SYS320-Automation-And-Scipting\\\\SYS320-SP22\\\\Week02\\\\homework\\\\ProxyLog.py'>"
      },
-     "execution_count": 57,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,20 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QQPlayer.exe btrace.qq.com:80 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQ.exe 183.60.49.182:443 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQProtectUpd.exe qdun-data.qq.com:443 proxy.cse.cuhk.edu.hk:5070\n",
       "QQ.exe tcpconn3.tencent.com:443 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQ.exe tcpconn.tencent.com:80 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQ.exe cgi.qqweb.qq.com:80 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQProtectUpd.exe qdun-data.qq.com:443 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe tcpconn6.tencent.com:443 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe 183.60.49.182:443 proxy.cse.cuhk.edu.hk:5070\n",
       "QQ.exe tcpconn6.tencent.com:80 proxy.cse.cuhk.edu.hk:5070\n",
-      "QQ.exe tcpconn6.tencent.com:443 proxy.cse.cuhk.edu.hk:5070\n"
+      "QQ.exe cgi.qqweb.qq.com:80 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQ.exe tcpconn.tencent.com:80 proxy.cse.cuhk.edu.hk:5070\n",
+      "QQPlayer.exe btrace.qq.com:80 proxy.cse.cuhk.edu.hk:5070\n"
      ]
     }
    ],
@@ -89,22 +89,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QQ.exe tcpconn3.tencent.com:443 149 bytes sent 121 bytes recevied \n",
-      "QQ.exe tcpconn.tencent.com:80 133 bytes sent 0 bytes recevied \n",
-      "QQProtectUpd.exe qdun-data.qq.com:443 261 bytes sent 70 bytes recevied \n",
-      "QQ.exe qqmail.tencent.com:80 336 bytes sent 2854 bytes recevied \n",
-      "QQ.exe cgi.qqweb.qq.com:80 477 bytes sent 448 bytes recevied \n",
-      "QQ.exe tcpconn6.tencent.com:80 0 bytes sent 0 bytes recevied \n",
-      "QQ.exe tcpconn6.tencent.com:443 0 bytes sent 0 bytes recevied \n",
       "QQ.exe tcpconn3.tencent.com:80 0 bytes sent 0 bytes recevied \n",
+      "QQ.exe cgi.qqweb.qq.com:80 477 bytes sent 448 bytes recevied \n",
+      "QQ.exe tcpconn3.tencent.com:443 149 bytes sent 121 bytes recevied \n",
+      "QQ.exe qqmail.tencent.com:80 336 bytes sent 2854 bytes recevied \n",
+      "QQ.exe tcpconn6.tencent.com:443 0 bytes sent 0 bytes recevied \n",
+      "QQ.exe tcpconn6.tencent.com:80 0 bytes sent 0 bytes recevied \n",
+      "QQ.exe showxml.qq.com:80 600 bytes sent 1716 bytes recevied \n",
+      "QQ.exe tcpconn.tencent.com:80 133 bytes sent 0 bytes recevied \n",
       "QQ.exe 2052.flash2-http.qq.com:80 466 bytes sent 125682 bytes recevied \n",
-      "QQ.exe showxml.qq.com:80 600 bytes sent 1716 bytes recevied \n"
+      "QQProtectUpd.exe qdun-data.qq.com:443 261 bytes sent 70 bytes recevied \n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [],
    "metadata": {
