week6 homework done

--- a/SYS320-SP22/Week06/homework/Task1-sshConosole.ipynb
+++ b/SYS320-SP22/Week06/homework/Task1-sshConosole.ipynb
@@ -11,6 +11,7 @@
     "import paramiko\n",
     "from getpass import getpass\n",
     "import os, os.path\n",
+    "import fs\n",
     "\n",
     "\n",
     "\n",
