week6 homework done

--- a/SYS320-SP22/Week06/homework/Task3-console.ipynb
+++ b/SYS320-SP22/Week06/homework/Task3-console.ipynb
@@ -2,12 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -45,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "# start SFTP session\n",
@@ -90,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "# close the ssh session\n",
